tests/ui/regions/wf-bound-region-in-local-soundness-issue-148854.stderr
error[E0310]: the parameter type `T` may not live long enough
  --> $DIR/wf-bound-region-in-local-soundness-issue-148854.rs:39:13
   |
LL |             Outer::<T, Inner<T>> { input: Some(x), output: storage.clone(), _phantom: PhantomData };
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |             |
   |             the parameter type `T` must be valid for the static lifetime...
   |             ...so that the type `T` will meet its required lifetime bounds
   |
help: consider adding an explicit lifetime bound
   |
LL | fn extend<T: Display + 'static>(x: T) -> Box<dyn Display + 'static> {
   |                      +++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0310`.
